--- a/apps/manga-cli/src/i18n/translations/en.json
+++ b/apps/manga-cli/src/i18n/translations/en.json
@@ -4,7 +4,8 @@
     "progress": "Progress",
     "files": "files",
     "downloadPath": "Where would you like to download the manga? (default: current directory)",
-    "openFile": "Opening file: ${filePath}"
+    "openFile": "Opening file: ${filePath}",
+    "donation": "If you like this project, please consider donating to support it. Thank you!"
   },
   "prompt": {
     "searchManga": "What manga do you want to download?",
