Added clear cache + debug config

--- a/apps/manga-cli/src/i18n/translations/en.json
+++ b/apps/manga-cli/src/i18n/translations/en.json
@@ -16,6 +16,7 @@
   "spinners": {
     "searching": "Searching for \"${searchValue}\"...",
     "getChaptersInfo": "Getting chapters info...",
-    "getChapterPages": "Getting chapters pages..."
+    "getChapterPages": "Getting chapters pages...",
+    "clearCache": "Clearing cache..."
   }
 }
