--- a/apps/manga-cli/src/i18n/translations/es.json
+++ b/apps/manga-cli/src/i18n/translations/es.json
@@ -16,6 +16,7 @@
   "spinners": {
     "searching": "Buscando resultados para \"${searchValue}\"...",
     "getChaptersInfo": "Obteniendo información de los capítulos...",
-    "getChapterPages": "Obteniendo información de páginas..."
+    "getChapterPages": "Obteniendo información de páginas...",
+    "clearCache": "Limpiando cache..."
   }
 }
