avoid continue with the flow if there's no results for the current manga name

--- a/apps/manga-cli/src/i18n/translations/en.json
+++ b/apps/manga-cli/src/i18n/translations/en.json
@@ -15,6 +15,7 @@
   },
   "spinners": {
     "searching": "Searching for \"${searchValue}\"...",
+    "searchingNotFound": "No results for \"${searchValue}\"",
     "getChaptersInfo": "Getting chapters info...",
     "getChapterPages": "Getting chapters pages...",
     "clearCache": "Clearing cache...",
