--- a/apps/manga-cli/src/i18n/translations/en.json
+++ b/apps/manga-cli/src/i18n/translations/en.json
@@ -5,6 +5,7 @@
     "files": "files",
     "downloadPath": "Where would you like to download the manga? (default: current directory)",
     "openFile": "Opening file: ${filePath}",
+    "openFolder": "Opening directory: ${filePath}",
     "donation": "If you like this project, please consider donating to support it. Thank you!",
     "fileStored": "File stored: ${filePath}"
   },
