--- a/apps/manga-cli/src/i18n/translations/es.json
+++ b/apps/manga-cli/src/i18n/translations/es.json
@@ -4,7 +4,8 @@
     "progress": "Progreso",
     "files": "archivos",
     "downloadPath": "Dónde te gustaría guardar el manga descargado? (por defecto: directorio actual)",
-    "openFile": "Opening file: ${filePath}",
+    "openFile": "Abriendo archivo: ${filePath}",
+    "openFolder": "Abriendo carpeta: ${filePath}",
     "donation": "Si te gusta este proyecto, considera hacer una donación para ayudar a mantenerlo activo",
     "fileStored": "Archivo guardado: ${filePath}"
   },
