feat: added AppBar component

--- a/apps/manga-desktop/i18n/locales/en.json
+++ b/apps/manga-desktop/i18n/locales/en.json
@@ -1,5 +1,9 @@
 {
   "hello": "hello world!",
+  "common": {
+    "appName": "Manga Desktop",
+    "searchPlaceholder": "Search..."
+  },
   "mangaResult": {
     "status": "Status:",
     "lastRelease": "Last Release:",
